--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -81,6 +81,12 @@
               <option value="anon">👻 Fully anon</option>
             </select>
           </div>
+
+          <label
+            class="flex items-center gap-2 cursor-pointer text-sm text-gray-500 hover:text-zynk transition select-none">
+            <input type="checkbox" id="allowReposts" class="accent-zynk" checked>
+            <span>Allow Reposts</span>
+          </label>
         </div>
 
         <button id="postBtn"
@@ -160,8 +166,9 @@
     const input = document.getElementById('postInput');
     const counter = document.getElementById('charCount');
     const postBtn = document.getElementById('postBtn');
-    const expirySelect = document.getElementById('expirySelect');
+
     const identitySelect = document.getElementById('identitySelect');
+    const allowRepostsCheckbox = document.getElementById('allowReposts');
     const feedPosts = document.getElementById('feedPosts');
     const LIMIT = 280;
 
@@ -187,6 +194,7 @@
 
       const hours = parseInt(expirySelect.value);
       const identity = identitySelect.value;
+      const allowReposts = allowRepostsCheckbox.checked;
       const now = Date.now();
       const expiryTime = now + (hours * 60 * 60 * 1000);
 
@@ -208,7 +216,8 @@
         expiry: expiryTime,
         author: author,
         handle: handle,
-        identity: identity
+        identity: identity,
+        allowReposts: allowReposts
       };
 
       savePost(post);
@@ -264,7 +273,7 @@
               
               <div class="flex gap-6 mt-4 text-gray-500 text-sm">
                 <span class="hover:text-zynk transition transform hover:scale-105 cursor-pointer">Reply</span>
-                <span class="hover:text-zynk transition transform hover:scale-105 cursor-pointer">Repost</span>
+                <span class="${post.allowReposts !== false ? 'hover:text-zynk transition transform hover:scale-105 cursor-pointer' : 'opacity-50 cursor-not-allowed'}" title="${post.allowReposts !== false ? 'Repost' : 'Reposts disabled'}">Repost</span>
                 <div class="like-container relative">
                    <button class="like-btn flex items-center gap-1 hover:text-zynk transition cursor-pointer select-none" onmousedown="startLike(this)" onmouseup="cancelLike(this)" onmouseleave="cancelLike(this)" ontouchstart="startLike(this)" ontouchend="cancelLike(this)">
                      <span class="like-fill"></span>
