--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -164,6 +164,38 @@
       </div>
     </div>
 
+    <!-- REPLY MODAL -->
+    <div id="replyModal"
+      class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/80 backdrop-blur-sm opacity-0 transition-opacity duration-300">
+      <div
+        class="bg-white dark:bg-[#121212] w-full max-w-lg rounded-2xl p-6 shadow-2xl transform scale-95 transition-transform duration-300"
+        id="replyModalContent">
+        <div class="flex justify-between items-center mb-4">
+          <h3 class="text-lg font-bold">Reply to <span id="replyingTo" class="text-zynk">@user</span></h3>
+          <button id="closeReplyBtn" class="text-gray-500 hover:text-white transition">✕</button>
+        </div>
+
+        <div
+          class="mb-4 p-4 rounded-xl bg-gray-50 dark:bg-[#1A1A1A] text-sm text-gray-500 italic border-l-2 border-zynk">
+          "<span id="replyContext">Post text...</span>"
+        </div>
+
+        <textarea id="replyInput" rows="4"
+          class="w-full bg-gray-100 dark:bg-[#1A1A1A] rounded-xl p-4 outline-none resize-none text-gray-800 dark:text-gray-200 placeholder-gray-500 focus:ring-1 focus:ring-zynk transition"
+          placeholder="Add your perspective (min 15 chars)..."></textarea>
+
+        <div class="flex justify-between items-center mt-4">
+          <div class="flex items-center gap-2 text-sm">
+            <span id="qualityIndicator" class="w-2 h-2 rounded-full bg-red-500 transition-colors duration-300"></span>
+            <span id="qualityText" class="text-gray-400 transition-colors duration-300">Too short</span>
+          </div>
+          <button id="sendReplyBtn" disabled
+            class="bg-zynk text-black px-6 py-2 rounded-xl font-semibold hover:opacity-90 transition disabled:opacity-50 disabled:cursor-not-allowed">
+            Reply
+          </button>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- RIGHT SIDEBAR -->
@@ -310,7 +342,7 @@
               </div>
               
               <div class="flex gap-6 mt-4 text-gray-500 text-sm">
-                <span class="hover:text-zynk transition transform hover:scale-105 cursor-pointer">Reply</span>
+                <span class="hover:text-zynk transition transform hover:scale-105 cursor-pointer" onclick="openReply('${post.handle}', '${post.text.replace(/'/g, "\\'")}')">Reply</span>
                 <span class="${post.allowReposts !== false ? 'hover:text-zynk transition transform hover:scale-105 cursor-pointer' : 'opacity-50 cursor-not-allowed'}" title="${post.allowReposts !== false ? 'Repost' : 'Reposts disabled'}">Repost</span>
                 <div class="like-container relative">
                    <button class="like-btn flex items-center gap-1 hover:text-zynk transition cursor-pointer select-none" onmousedown="startLike(this)" onmouseup="cancelLike(this)" onmouseleave="cancelLike(this)" ontouchstart="startLike(this)" ontouchend="cancelLike(this)">
@@ -474,6 +506,99 @@
     themeToggle.addEventListener('click', () => {
       const isDark = theme.toggle();
       updateIcon(isDark);
+    });
+
+    // REPLY LOGIC
+    const replyModal = document.getElementById('replyModal');
+    const replyModalContent = document.getElementById('replyModalContent');
+    const closeReplyBtn = document.getElementById('closeReplyBtn');
+    const replyInput = document.getElementById('replyInput');
+    const sendReplyBtn = document.getElementById('sendReplyBtn');
+    const qualityIndicator = document.getElementById('qualityIndicator');
+    const qualityText = document.getElementById('qualityText');
+    const replyingTo = document.getElementById('replyingTo');
+    const replyContext = document.getElementById('replyContext');
+
+    function openReply(handle, text) {
+      replyingTo.textContent = handle;
+      replyContext.textContent = text.length > 50 ? text.substring(0, 50) + '...' : text;
+
+      replyModal.classList.remove('hidden');
+      requestAnimationFrame(() => {
+        replyModal.classList.remove('opacity-0');
+        replyModalContent.classList.remove('scale-95');
+        replyModalContent.classList.add('scale-100');
+      });
+      replyInput.focus();
+    }
+
+    function closeReply() {
+      replyModal.classList.add('opacity-0');
+      replyModalContent.classList.remove('scale-100');
+      replyModalContent.classList.add('scale-95');
+
+      setTimeout(() => {
+        replyModal.classList.add('hidden');
+        replyInput.value = '';
+        updateQuality(); // Reset
+      }, 300);
+    }
+
+    closeReplyBtn.addEventListener('click', closeReply);
+    replyModal.addEventListener('click', (e) => {
+      if (e.target === replyModal) closeReply();
+    });
+
+    // Quality Filter Logic
+    replyInput.addEventListener('input', updateQuality);
+
+    function updateQuality() {
+      const text = replyInput.value.trim();
+      const length = text.length;
+
+      // Simple Heuristics
+      const isShort = length < 15;
+      const isMedium = length >= 15 && length < 40;
+      const isLong = length >= 40;
+
+      // Anti-spam (basic)
+      const spamWords = ['lol', 'nice', 'cool', 'k', 'ok', 'good'];
+      const isSpam = spamWords.includes(text.toLowerCase());
+
+      if (isSpam || isShort) {
+        setQuality('bad', 'Too short / Low effort');
+        sendReplyBtn.disabled = true;
+      } else if (isMedium) {
+        setQuality('medium', 'Getting there...');
+        sendReplyBtn.disabled = false;
+      } else {
+        setQuality('good', 'Great depth! 🌟');
+        sendReplyBtn.disabled = false;
+      }
+    }
+
+    function setQuality(level, msg) {
+      qualityText.textContent = msg;
+      if (level === 'bad') {
+        qualityIndicator.className = 'w-2 h-2 rounded-full bg-red-500 transition-colors duration-300';
+        qualityText.className = 'text-red-400 text-sm transition-colors duration-300';
+      } else if (level === 'medium') {
+        qualityIndicator.className = 'w-2 h-2 rounded-full bg-yellow-500 transition-colors duration-300';
+        qualityText.className = 'text-yellow-400 text-sm transition-colors duration-300';
+      } else {
+        qualityIndicator.className = 'w-2 h-2 rounded-full bg-green-500 transition-colors duration-300';
+        qualityText.className = 'text-green-400 text-sm transition-colors duration-300';
+      }
+    }
+
+    sendReplyBtn.addEventListener('click', () => {
+      // Here you would normally save the reply
+      // For visual feedback:
+      sendReplyBtn.textContent = 'Sent!';
+      setTimeout(() => {
+        closeReply();
+        sendReplyBtn.textContent = 'Reply';
+      }, 500);
     });
   </script>
 
