--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -109,7 +109,7 @@
             <div class="flex justify-between items-start">
                 <div class="w-24 h-24 rounded-full bg-gray-700 border-4 border-white dark:border-dark object-cover">
                 </div>
-                <button
+                <button onclick="openEditModal()"
                     class="border border-gray-300 dark:border-gray-600 px-4 py-1.5 rounded-full font-semibold text-sm hover:bg-gray-100 dark:hover:bg-gray-800 transition">
                     Edit Profile
                 </button>
@@ -117,16 +117,16 @@
 
             <div class="mt-4">
                 <div class="flex items-center gap-2">
-                    <h2 class="text-xl font-bold">You</h2>
+                    <h2 id="displayName" class="text-xl font-bold">You</h2>
                     <span id="streakBadge"
                         class="hidden text-xs bg-orange-500/10 text-orange-500 px-2 py-0.5 rounded-full border border-orange-500/20">
                         Thought Streak 🔥
                     </span>
                 </div>
-                <p class="text-gray-500">@you</p>
+                <p id="displayUsername" class="text-gray-500">@you</p>
             </div>
 
-            <p class="mt-4 text-gray-800 dark:text-gray-200">
+            <p id="displayBio" class="mt-4 text-gray-800 dark:text-gray-200">
                 Living in the moment. No stats, just vibes. 🌊
             </p>
 
@@ -173,7 +173,36 @@
         </ul>
     </aside>
 
+    <!-- EDIT PROFILE MODAL -->
+    <div id="editProfileModal"
+        class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/80 backdrop-blur-sm">
+        <div class="bg-[#121212] p-8 rounded-2xl w-full max-w-md border border-gray-800">
+            <h2 class="text-2xl font-bold mb-6 text-white">Edit Profile</h2>
+
+            <input id="editName" placeholder="Display Name"
+                class="w-full mb-4 px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition" />
+
+            <input id="editUsername" placeholder="Username (start with @)"
+                class="w-full mb-4 px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition" />
+
+            <textarea id="editBio" placeholder="Bio" rows="3"
+                class="w-full mb-4 px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition"></textarea>
+
+            <div class="flex gap-4">
+                <button onclick="closeEditModal()"
+                    class="flex-1 py-3 rounded-xl font-semibold text-gray-400 hover:text-white transition">
+                    Cancel
+                </button>
+                <button onclick="saveProfile()"
+                    class="flex-1 bg-[#12E6E6] text-black py-3 rounded-xl font-semibold hover:opacity-90 transition">
+                    Save Changes
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- SCRIPT -->
+    <script src="../utils/profile.js"></script>
     <script>
         // Theme Toggle Logic
         const themeToggle = document.getElementById('themeToggle');
@@ -252,7 +281,6 @@
               </div>
             </div>
           </div>
-        </div>
         `;
             }).join('');
         }
