--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -107,8 +107,8 @@
         <!-- PROFILE HEADER -->
         <div class="p-6 border-b border-gray-200 dark:border-gray-800">
             <div class="flex justify-between items-start">
-                <div class="w-24 h-24 rounded-full bg-gray-700 border-4 border-white dark:border-dark object-cover">
-                </div>
+                <img id="profileAvatar" src=""
+                    class="w-24 h-24 rounded-full bg-gray-700 border-4 border-white dark:border-dark object-cover">
                 <button onclick="openEditModal()"
                     class="border border-gray-300 dark:border-gray-600 px-4 py-1.5 rounded-full font-semibold text-sm hover:bg-gray-100 dark:hover:bg-gray-800 transition">
                     Edit Profile
@@ -178,6 +178,34 @@
         class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black/80 backdrop-blur-sm">
         <div class="bg-[#121212] p-8 rounded-2xl w-full max-w-md border border-gray-800">
             <h2 class="text-2xl font-bold mb-6 text-white">Edit Profile</h2>
+
+            <!-- Image Upload Section -->
+            <div class="flex flex-col items-center mb-6">
+                <div class="relative w-24 h-24 mb-4">
+                    <img id="editAvatarPreview" src="" alt="Profile Preview"
+                        class="w-full h-full rounded-full object-cover border-2 border-gray-700">
+                    <button onclick="document.getElementById('imageUpload').click()"
+                        class="absolute bottom-0 right-0 bg-zynk text-black p-1.5 rounded-full hover:opacity-90 transition"
+                        title="Change Photo">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z">
+                            </path>
+                            <circle cx="12" cy="13" r="4"></circle>
+                        </svg>
+                    </button>
+                </div>
+                <div class="flex gap-3">
+                    <button onclick="document.getElementById('imageUpload').click()"
+                        class="text-xs text-zynk hover:underline font-semibold">
+                        Change Photo
+                    </button>
+                    <button onclick="removeImage()" class="text-xs text-red-500 hover:underline font-semibold">
+                        Remove
+                    </button>
+                </div>
+                <input type="file" id="imageUpload" accept="image/*" class="hidden" onchange="handleImageUpload(event)">
+            </div>
 
             <input id="editName" placeholder="Display Name"
                 class="w-full mb-4 px-4 py-3 rounded-xl bg-black border border-gray-700 text-white focus:border-zynk focus:outline-none transition" />
