--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -60,7 +60,61 @@
       <textarea id="postInput" placeholder="Say something raw..." class="w-full bg-transparent resize-none outline-none text-lg
                placeholder-gray-500 text-gray-800 dark:text-white" rows="3"></textarea>
 
-      <div class="flex justify-between items-center mt-4">
+      <!-- Input Options Toolbar -->
+      <div class="flex items-center gap-4 mt-3 border-t border-gray-100 dark:border-gray-800/50 pt-3">
+        <button class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="Media">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+            <circle cx="8.5" cy="8.5" r="1.5"></circle>
+            <polyline points="21 15 16 10 5 21"></polyline>
+          </svg>
+        </button>
+        <button class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="GIF">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 8V4H8" />
+            <rect width="16" height="12" x="4" y="8" rx="2" />
+            <path d="M2 14h2" />
+            <path d="M20 14h2" />
+            <path d="M15 13h2" />
+            <path d="M15 17h2" />
+          </svg>
+        </button>
+        <button class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="Poll">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M8 6h13" />
+            <path d="M8 12h13" />
+            <path d="M8 18h13" />
+            <path d="M3 6h.01" />
+            <path d="M3 12h.01" />
+            <path d="M3 18h.01" />
+          </svg>
+        </button>
+        <button class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="Emoji">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10" />
+            <path d="M8 14s1.5 2 4 2 4-2 4-2" />
+            <line x1="9" x2="9.01" y1="9" y2="9" />
+            <line x1="15" x2="15.01" y1="9" y2="9" />
+          </svg>
+        </button>
+        <button class="text-zynk hover:text-white transition p-1.5 rounded-full hover:bg-zynk/10" title="Schedule">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+            <line x1="16" y1="2" x2="16" y2="6" />
+            <line x1="8" y1="2" x2="8" y2="6" />
+            <line x1="3" y1="10" x2="21" y2="10" />
+            <path d="M12 14v4" />
+            <path d="M12 14h4" />
+          </svg>
+        </button>
+      </div>
+
+      <div class="flex justify-between items-center mt-2">
         <div class="flex items-center gap-4">
           <span id="charCount" class="text-sm text-gray-500">0 / 280 chars</span>
 
